# gckb

./: .gitignore  CMakeLists.txt  README.md  buildDebug.sh  buildRelease.sh  gckb  gckb.1  install.sh  patchDateAndVersion.sh  setBranchMetaData.sh  setReleaseMetaData.sh  uninstall.sh
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: code_smell.md  documentation.md  enhancement.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix_pull_request.md  documentation_pull_request.md  enhancement_pull_request.md
src/: gckb.c
